--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: phiagallery/phia.gallery
-  branch: master
+  branch: main
   local_backend: true # to make CMS work with the local git without going over the server when in development mode
   base_url: "https://phiagallery.vercel.app/" # our site's base URL
   auth_endpoint: "api/auth" # used together with base_url for our custom endpoints (more on this later)
